# SeleniumDownloader

./: .gitignore  AGENTS.md  AudioDownloader.spec  README.md  __init__.py  browser_manager.py  config.py  constants.py  download_promos.bat  download_utils.py  downloader.py  file_watcher.py  gui.py  main.py  pyproject.toml  requirements.txt  run_all_tests.py  scheduler.py  test_detection_standalone.py  test_downloads.py  update_checker.py
.github/workflows/: main.yml  windows_build.yml
audio_downloader/: __init__.py  __main__.py  browser_manager.py  config.py  gui.py  main.py
audio_downloader/sources/: __init__.py  base.py  clear_out_west.py  melinda_myers.py  northwest_outdoors.py  weekend_in_the_country.py  whittler.py
docs/superpowers/specs/: 2026-06-26-weekly-automation-design.md
scripts/: download_global_features.bat  download_promos.bat  witc_promo_rename.bat
sources/: __init__.py  base.py  clear_out_west.py  melinda_myers.py  northwest_outdoors.py  weekend_in_the_country.py  westwood_one.py  whittler.py
tests/: __init__.py  test_browser_manager.py  test_browser_manager_unit.py  test_config_edge_cases.py  test_config_unit.py  test_detection_standalone.py  test_download_utils.py  test_downloads.py  test_integration.py  test_scheduler.py  test_scheduler_unit.py  test_sources.py  test_sources_unit.py  test_update_checker.py  test_weekend_in_the_country.py
windows/: build.bat  build.py  run.bat  test_download.bat
