[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "audio-download-manager"
version = "1.1.9"
description = "Download radio show audio files from multiple sources"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
    "psutil>=5.9.0",
]

[tool.setuptools.packages.find]
include = ["audio_downloader", "audio_downloader.*"]